# portBLAS

./: .clang-format  .computecpp.cfg  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Contributors.md  Dockerfile  LICENSE.md  NOTICE  README.md  Roadmap.md  blas2_trees.hpp  blas3_interface_test.cpp  build.sh  conanfile.py  paper_clblas_test.cpp  run.sh  run_docker.sh  sycl-blasConfig.cmake
.github/: dependabot.yml
auto_tuner/: CMakeLists.txt  tune_all.cpp  tune_nn.cpp  tune_nt.cpp  tune_tn.cpp  tune_tt.cpp
bench/: CMakeLists.txt  benchmark.hpp  blas_benchmark.hpp  blas_benchmark2.hpp  clblas_benchmark.cpp  clblast_benchmark.cpp  clwrap.hpp  range.hpp  syclblas_benchmark.cpp
bench/clblas/: clblas_benchmark_level1.cpp
bench/clblast/: clblast_benchmark_level1.cpp  clblast_benchmark_level2.cpp  clblast_benchmark_level3.cpp
bench/common/: blas_benchmark.hpp  cli_benchmark_interface.hpp  cli_device_selector.hpp  clwrap.hpp  range.hpp
bench/syclblas/: syclblas_benchmark_batch.cpp  syclblas_benchmark_batch_gemm.cpp  syclblas_benchmark_level1.cpp  syclblas_benchmark_level2.cpp  syclblas_benchmark_level2_jose.cpp  syclblas_benchmark_level2_legacy.cpp  syclblas_benchmark_level3.cpp
benchmark/: CMakeLists.txt  README.md  argparse.hpp  bench_info.cc  benchmark_cli_args.hpp  cli_args.hpp  common_utils.hpp  computecpp_version_config.h.in  gen_param.py  make_git_config.bat  make_git_config.sh  range.hpp  run_benchmark.py  run_weak_scaling.py  test.csv  utils.py
benchmark/acl/: CMakeLists.txt  main.cpp  utils.hpp
benchmark/acl/blas3/: gemm.cpp
benchmark/argparse/: LICENSE  README.md  argparse.hpp
benchmark/clBench/: clwrap.hpp
benchmark/clBench/acl/: CMakeLists.txt  main.cpp  utils.hpp
benchmark/clBench/clblas/: CMakeLists.txt  main.cpp  utils.hpp
benchmark/clBench/clblast/: CMakeLists.txt  main.cpp  utils.hpp
benchmark/clblas/: CMakeLists.txt  clwrap.cpp  clwrap.h  main.cpp  utils.hpp
benchmark/clblas/blas3/: trsm.cpp
benchmark/clblast/: CMakeLists.txt  cli_device_selector.hpp  clwrap.cpp  clwrap.h  main.cpp  utils.hpp
benchmark/clblast/blas1/: CMakeLists.txt  asum.cpp  axpy.cpp  dot.cpp  iamax.cpp  iamin.cpp  nrm2.cpp  scal.cpp
benchmark/clblast/blas2/: CMakeLists.txt  gemv.cpp
benchmark/clblast/blas3/: CMakeLists.txt  gemm.cpp  gemm_batched.cpp  trsm.cpp
benchmark/common/: CMakeLists.txt
benchmark/config_csv/: gemm_batched_interleaved.csv  inference_resnet_im2col_bkfil.csv  training_alexnet_wino_bkin.csv  training_resnet_wino_bkin.csv
benchmark/config_csv/blas1/: blas1_powersof2.csv
benchmark/config_csv/blas2/: blas2_powersof2.csv  spr.csv
benchmark/config_csv/blas3/: gemm_inference_alexnet_im2col_bkfil.csv  gemm_inference_alexnet_im2col_fwd.csv  gemm_inference_resnet_im2col_bkin.csv  gemm_inference_resnet_wino_fwd.csv  gemm_inference_vgg_im2col_bkfil.csv  gemm_inference_vgg_im2col_bkin.csv  gemm_inference_vgg_im2col_fwd.csv  gemm_inference_vgg_wino_fwd.csv  gemm_square.csv  gemm_training_alexnet_im2col_bkfil.csv  gemm_training_resnet_im2col_bkfil.csv  gemm_training_resnet_im2col_bkin.csv  gemm_training_resnet_im2col_fwd.csv  gemm_training_resnet_wino_bkfil.csv  gemm_training_vgg_wino_bkfil.csv
benchmark/cublas/: CMakeLists.txt  main.cpp  utils.hpp
benchmark/portblas/: CMakeLists.txt  main.cpp  utils.hpp
benchmark/rocblas/: CMakeLists.txt  main.cpp  utils.hpp
benchmark/syclblas/: CMakeLists.txt  cli_device_selector.hpp  main.cpp  utils.hpp
example/: CMakeLists.txt  blas1_copy.cpp
gbench/syclblas/: CMakeLists.txt  cli_device_selector.hpp  example.cpp  main.cpp  utils.hpp
samples/: CMakeLists.txt  FindPORTBLAS.cmake  FindSyclBLAS.cmake  README.md  gemm.cpp  gemv.cpp  symm.cpp  util.hpp
src/: CMakeLists.txt  config.hpp.in  portblas.hpp  sycl_blas.hpp
src/container/: CMakeLists.txt  sycl_iterator.cpp  sycl_iterator.hpp
src/executors/: executor_sycl.hpp  kernel_constructor.hpp
src/interface/: CMakeLists.txt  blas1_interface.hpp  blas2_interface.hpp  blas3_interface.hpp  extension_interface.hpp  gemm.hpp  gemm_interface.hpp  gemm_launcher.hpp  model.yaml  reduction_interface.hpp  symm_interface.hpp  transpose_launcher.hpp  trsm.hpp  trsm_interface.hpp
src/operations/: CMakeLists.txt  blas1_trees.hpp  blas2_trees.hpp  blas3_trees.hpp  blas_constants.cpp  blas_constants.hpp  blas_operators.hpp  extension_trees.hpp
src/policy/: CMakeLists.txt  sycl_policy_handler.cpp  sycl_policy_handler.hpp  usm_policy_handler.cpp  usm_policy_handler.hpp
src/quantize/: CMakeLists.txt  quantize.cpp.in  quantize.hpp  quantize_base.cpp.in
src/sb_handle/: kernel_constructor.hpp  portblas_handle.hpp  sycl_blas_handle.hpp  temp_memory_pool.hpp
src/views/: packet_helper.hpp  view.hpp  view_sycl.hpp  view_sycl_usm.hpp
test/: CMakeLists.txt  README.md  blas1_test.hpp  blas_test.hpp  blas_test_macros.hpp  blas_test_macros.hpp.in  system_reference_blas.hpp
test/common/: CMakeLists.txt
test/exprtest/: CMakeLists.txt  blas1_axpy_copy_test.cpp  blas1_break_test.cpp  blas1_fusion_test.cpp  blas1_iface_test.cpp  blas1_reduction_asum_test.cpp  blas1_reduction_fusion_test.cpp  blas1_scal_asum_test.cpp  collapse_nested_tuple.cpp  extension_reduction_partial_rows.cpp  extension_reduction_partial_rows_test.cpp  main.cpp
test/unittest/: CMakeLists.txt  blas1_asum_test.cpp  blas1_axpy_test.cpp  blas1_copy_test.cpp  blas1_dot_test.cpp  blas1_iamax_test.cpp  blas1_iamin_test.cpp  blas1_nrm2_test.cpp  blas1_rotg_test.cpp  blas1_scal_test.cpp  blas1_swap_test.cpp  blas2_gemv_test.cpp  blas2_ger_test.cpp  blas3_gemm_test.cpp  main.cpp  sycl_buffer_test.cpp
tests/: CMakeLists.txt  blas1_interface_test.cpp  blas2_interface_test.cpp  blas3_gemm_test.cpp  blas3_interface_test.cpp  cg_test.cpp  gemm_test.cpp  gemm_test2.cpp  gemm_test_all.cpp  gemm_test_ta.cpp  gemm_test_ta_tb.cpp  gemm_test_tb.cpp  gemm_utils.hpp  matrix_test.cpp  paper_blas1_test.cpp  paper_blas1_test.sh  paper_clblas_test.cpp  simple_axpy_test.cpp  test_utils.hpp
tests/disable/: paper_blas1_test.cpp
tools/auto_tuner/: CMakeLists.txt  README.md
(+725 files in other folders)
